--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 
-# Jetbrain Rider Cache
-.idea/
-Assets/Plugins/Editor/JetBrains*
+
 
 /[Ll]ibrary/
 /[Tt]emp/
@@ -62,4 +60,9 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+# Jetbrain Rider Cache
+.idea
+Assets/Plugins/Editor/JetBrains*
+
 
